--- a/index.html
+++ b/index.html
@@ -228,28 +228,28 @@
               <div>
                 <div class="place">IIT Bombay</div>
                 <div class="where">Research Assistance — Mumbai, India</div>
-                <div class="when">Duration: <!-- fill --> e.g., Jan 2023 – Jun 2023</div>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <div class="place">University of Tennessee</div>
-                <div class="where">Research Intern — Knoxville, USA</div>
-                <div class="when">Duration: <!-- fill --> e.g., Jul 2023 – Dec 2023</div>
+                <div class="when">Duration: <!-- fill --> e.g., Feb 2025 – Present</div>
               </div>
             </div>
             <div class="row">
               <div>
                 <div class="place">TechShiksha</div>
                 <div class="where">Instructor — Bangalore, India</div>
-                <div class="when">Duration: <!-- fill --> e.g., 2022 (6 months)</div>
+                <div class="when">Duration: <!-- fill --> e.g., Aug 2024 - Jan 2025</div>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <div class="place">University of Tennessee</div>
+                <div class="where">Research Intern — Knoxville, USA</div>
+                <div class="when">Duration: <!-- fill --> e.g., Jul 2024 – Dec 2024</div>
               </div>
             </div>
             <div class="row">
               <div>
                 <div class="place">Madras Minds</div>
                 <div class="where">Developer Intern — Chennai, India</div>
-                <div class="when">Duration: <!-- fill --> e.g., 2021 (Internship)</div>
+                <div class="when">Duration: <!-- fill --></div>
               </div>
             </div>
           </div>
