--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               <div>
                 <div class="place">Madras Minds</div>
                 <div class="where">Developer Intern — Chennai, India</div>
-                <div class="when">Duration: Jan 2024 – Jun 2024</div>
+                <div class="when">Duration: Feb 2023</div>
               </div>
             </div>
           </div>
