--- a/ravana-vr.html
+++ b/ravana-vr.html
@@ -70,7 +70,6 @@
       <div class="crumbs"><a href="../index.html">← Back</a></div>
       <div class="btns">
         <a class="btn" target="_blank" rel="noopener" href="https://youtu.be/1x3rMaC1Cc4">Video</a>
-        
       </div>
     </div>
   </header>
@@ -81,7 +80,7 @@
     <div class="panel" style="margin-top:-30px">
       <h1>Ravana VR — Cinematic Showcase</h1>
       <div class="tags"><span class="tag">Virtual Reality</span><span class="tag">Showcase</span><span class="tag">Unreal + Blender</span></div>
-      <p>Immersive VR cinematic based on the character Ravana for a college event—combining animation, stage‑like lighting, and synchronized audio to deliver a visually rich experience with detailed environments and timed sequences.</p>
+      <p>Immersive VR cinematic based on the character Ravana for a college event—combining animation, stage-like lighting, and synchronized audio to deliver a visually rich experience with detailed environments and timed sequences.</p>
       <p><strong>Client:</strong> University purpose (showcase)<br>
          <strong>Software:</strong> Unreal Engine, Blender<br>
          <strong>Type:</strong> Virtual Reality<br>
@@ -92,7 +91,7 @@
     <section class="two">
       <div class="panel">
         <h2>My role</h2>
-        <p>Environment lookdev, animation/sequencing, lighting, audio sync, real‑time polish.</p>
+        <p>Environment lookdev, animation/sequencing, lighting, audio sync, real-time polish.</p>
       </div>
       <div class="panel">
         <h2>Tools / Stack</h2>
@@ -100,27 +99,20 @@
         <h2 style="margin-top:10px">Context</h2>
         <p>Showcase project to bring mythology to life with modern VR visuals.</p>
       </div>
-    <section>
-  <h2>Process</h2>
-  <ol>
-    <li><strong>Discovery & Planning:</strong> Defined project scope, requirements, and constraints in consultation with stakeholders.</li>
-    <li><strong>Design:</strong> Created wireframes, 3D models, and interaction flow to ensure optimal user experience and technical feasibility.</li>
-    <li><strong>Development:</strong> Implemented the environment, interactions, and assets using Unreal Engine and relevant toolchains.</li>
-    <li><strong>Testing & Iteration:</strong> Conducted multiple test runs, collected feedback, and iteratively refined features.</li>
-    <li><strong>Deployment:</strong> Packaged and delivered the project for live demonstration, ensuring stability and performance.</li>
-  </ol>
+    </section>
 
     <section>
       <div class="panel">
         <h2>Process</h2>
         <ul>
           <li>Develop visual concept and mood; gather style references.</li>
-<li>Model and assemble the set; establish lighting to support tone and depth.</li>
-<li>Choreograph cameras in Sequencer; time beats to audio.</li>
-<li>Add animation passes and polish with post‑fx; profile and export the final VR piece.</li>
+          <li>Model and assemble the set; establish lighting to support tone and depth.</li>
+          <li>Choreograph cameras in Sequencer; time beats to audio.</li>
+          <li>Add animation passes and polish with post-fx; profile and export the final VR piece.</li>
         </ul>
       </div>
     </section>
-    </main>
+
+  </main>
 </body>
 </html>
