--- a/dental-vr.html
+++ b/dental-vr.html
@@ -32,7 +32,7 @@
     /* Cover hero */
     .cover{
       height:min(36vh, 360px);
-      background:#ddd url('assets/Dental_Front.png') center/cover no-repeat; /* <- your image as background */
+      background:#ddd url('Dental_Front.png') center/cover no-repeat; /* <- your image as background */
     }
 
     .titlerow{display:grid; grid-template-columns: 1fr 220px; gap:24px; margin-top: -36px; padding:18px; background:var(--surface); border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow)}
