--- a/ravana-vr.html
+++ b/ravana-vr.html
@@ -74,7 +74,7 @@
     </div>
   </header>
 
-  <div class="cover" style="background-image:url('assets/ravana-hero.jpg')"></div>
+  <div class="cover" style="background-image:url('Ravana_Front.png')"></div>
 
   <main class="wrap">
     <div class="panel" style="margin-top:-30px">
