--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <!-- The avatar sits at the centre of the hero and remains static while the swirls rotate -->
-    <img src="./c6c12abc-a8b5-4eb0-8f27-d721d9cab05b.png" alt="Profile.png" class="hero-image">
+    <img src="./c6c12abc-a8b5-4eb0-8f27-d721d9cab05b.png" alt="Profile_1.png" class="hero-image">
     <!-- Swirling lines created purely with CSS borders.  Their animations are defined in the stylesheet. -->
     <div class="swirl swirl1" aria-hidden="true"></div>
     <div class="swirl swirl2" aria-hidden="true"></div>
